--- a/falcon/dashboard/templates/dashboard/entity_definition.html
+++ b/falcon/dashboard/templates/dashboard/entity_definition.html
@@ -2,7 +2,7 @@
   <div class="panel-heading">
     Definition
     <span class="pull-right">
-      <a href="#"> Edit </a>
+      <a href="{% url 'edit_entity' type name %}"> Edit </a>
     </span>
   </div>
 
