--- a/falcon/dashboard/templates/dashboard/base.html
+++ b/falcon/dashboard/templates/dashboard/base.html
@@ -6,72 +6,88 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   {% block title %}<title>Apache Falcon</title> {% endblock title %}
 
-  <!-- Bootstrap -->
-  <!-- <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/2.3.2/css/bootstrap.min.css"> -->
+
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-
-
 
   <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
   <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-      <![endif]-->
+  <!--[if lt IE 9]>
+    <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+  <![endif]-->
+
+  <link href="{{STATIC_URL}}css/falcon.css" type="text/css" rel="stylesheet" />
+  <link rel="stylesheet" href="{{STATIC_URL}}css/bootstrap-datetimepicker.min.css" />
+  <link rel="stylesheet" href="//cdn.datatables.net/1.10.1/css/jquery.dataTables.css" />
+  <link rel="stylesheet" href="{{ STATIC_URL }}css/select2.css">
+  <link rel="stylesheet" href="{{ STATIC_URL }}css/select2-bootstrap.css">
+
+  <link href="{{STATIC_URL}}css/jquery.jqplot.min.css" rel="stylesheet" media="screen"> 
+  <link rel="apple-touch-icon-precomposed" sizes="144x144" href="{{STATIC_URL}}img/falcon-144.png" />
+  <link rel="apple-touch-icon-precomposed" sizes="114x114" href="{{STATIC_URL}}img/falcon-114.png" />
+  <link rel="apple-touch-icon-precomposed" sizes="72x72" href="{{STATIC_URL}}img/falcon-72.png" />
+  <link rel="apple-touch-icon-precomposed" href="{{STATIC_URL}}img/falcon-57.png" />
+  <link rel="shortcut icon" href="{{STATIC_URL}}img/favicon.png" />
+
+</head>
 
 
-      <link href="{{STATIC_URL}}css/falcon.css" type="text/css" rel="stylesheet" />
-      <link rel="stylesheet" href="{{STATIC_URL}}css/bootstrap-datetimepicker.min.css" />
-
-      <link rel="apple-touch-icon-precomposed" sizes="144x144" href="{{STATIC_URL}}img/falcon-144.png" />
-      <link rel="apple-touch-icon-precomposed" sizes="114x114" href="{{STATIC_URL}}img/falcon-114.png" />
-      <link rel="apple-touch-icon-precomposed" sizes="72x72" href="{{STATIC_URL}}img/falcon-72.png" />
-      <link rel="apple-touch-icon-precomposed" href="{{STATIC_URL}}img/falcon-57.png" />
-      <link rel="shortcut icon" href="{{STATIC_URL}}img/favicon.png" />
-
-    </head>
-
-    <body>
-      <nav class="navbar navbar-default" role="navigation">
-        <div class="container-fluid">
-          <div class="navbar-header">
-            <a class="navbar-brand falcon-brand" href="#">Apache Falcon</a>
-          </div>
-
-          <div class="collapse navbar-collapse" id="dashboard-navbar">
-            <ul class="nav navbar-nav">
-              <li class="active"><a href="#">Dashboard</a></li>
-              <li><a href="#">Monitoring</a></li>
-              <li><a href="#">Designer</a></li>
-            </ul>
-          </div>
-        </div>
-      </nav>
 
 
-      <div class="container-fluid">
-        {% block content %} {% endblock content %}
+<body>
+  <nav class="navbar navbar-default" role="navigation">
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <a class="navbar-brand falcon-brand" href="#">Apache Falcon</a>
       </div>
 
+      <div class="collapse navbar-collapse" id="dashboard-navbar">
+        <ul class="nav navbar-nav">
+          <li id="dashboard"><a href="{% url 'dashboard_index' %}">Dashboard</a></li>
+          <li id="monitoring"><a href="{% url 'monitoring_index' %}">Monitoring</a></li>
+          <li id="alerting"><a href="#">Alerting</a></li>
+          <li id="designer"><a href="{% url 'create_process' %}">Designer</a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
 
-      <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-      <!-- <script src="//maxcdn.bootstrapcdn.com/bootstrap/2.3.2/js/bootstrap.min.js"></script> -->
-      <script type="text/javascript" src="{{STATIC_URL}}js/moment.min.js"></script>
-      <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
-      <script src="{{STATIC_URL}}js/bootstrap-datetimepicker.js"></script>
-      <script src="{{STATIC_URL}}js/base.js"></script>
 
-      <script type="text/javascript">
-      $(function(){
-        $('.bootstrap-datetimepicker').datetimepicker({
-          autoclose: true,
-          todayHighlight: true,
-          pick12HourFormat: false
-        });
-      });
-      </script>
+  <div class="container-fluid">
+    {% block content %} {% endblock content %}
+  </div>
 
-      {% block child_scripts %} {% endblock child_scripts %}
-      {% block child_js %} {% endblock child_js %}
-    </body>
-    </html>
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+  <!-- <script src="//maxcdn.bootstrapcdn.com/bootstrap/2.3.2/js/bootstrap.min.js"></script> -->
+  <script type="text/javascript" src="{{STATIC_URL}}js/moment.min.js"></script>
+  <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+  <script src="{{STATIC_URL}}js/bootstrap-datetimepicker.js"></script>
+  <script src="//cdn.datatables.net/1.10.1/js/jquery.dataTables.min.js"></script>
+  <script src="//cdn.datatables.net/plug-ins/725b2a2115b/integration/bootstrap/3/dataTables.bootstrap.js"></script>
+  <script src="{{STATIC_URL}}js/base.js"></script>
+  <script type="text/javascript" src="http://www.flotcharts.org/flot/jquery.flot.js"></script>
+  <script type="text/javascript" src="{{STATIC_URL}}js/jquery.flot.selection.js"></script>
+  <script type="text/javascript" src="{{STATIC_URL}}js/jquery.flot.time.min.js"></script>
+  <script type="text/javascript" src="{{STATIC_URL}}js/jquery.flot.tooltip.min.js"></script>
+  <script type="text/javascript" src="{{STATIC_URL}}js/select2.min.js"></script>
+  <script type="text/javascript">
+
+  $(function(){
+    $('#{{current_tab}}').removeClass('btn-default').addClass('btn-primary');
+    $('#{{current_app}}').addClass('active');
+
+    $('.bootstrap-datetimepicker').datetimepicker({
+      autoclose: true,
+      todayHighlight: true,
+      pick12HourFormat: false
+    });
+
+
+  });
+  </script>
+
+  {% block child_scripts %} {% endblock child_scripts %}
+  {% block child_js %} {% endblock child_js %}
+</body>
+</html>
